<resources>
    <string name="app_name">ArtHub</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="user_name">art@hub.com</string>
    <string name="nav_interests">Interests</string>
    <string name="nav_about">About you</string>
    <string name="nav_watched">Watched Anime</string>
    <string name="nav_favorite_character">Favorite Character</string>
    <string name="nav_support">Support</string>
    <string name="nav_help">Help</string>
    <string name="nav_feedback">Give us feedback</string>
    <string name="nav_open_drawer">Open navigation drawer</string>
    <string name="nav_close_drawer">Close navigation drawer</string>
    <string name="social">Social</string>
    <string name="nav_home">Home</string>
</resources>
