<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_home" />
        <item
            android:id="@+id/nav_interests"
            android:icon="@drawable/ic_star"
            android:title="@string/nav_interests" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/nav_about" />
        <item
            android:id="@+id/nav_watched"
            android:icon="@drawable/ic_tv"
            android:title="@string/nav_watched" />
    </group>
    <item android:title="@string/nav_support">
        <menu>
            <item
                android:id="@+id/nav_help"
                android:icon="@android:drawable/ic_menu_help"
                android:title="@string/nav_help"/>
            <item
                android:id="@+id/nav_feedback"
                android:icon="@android:drawable/sym_action_email"
                android:title="@string/nav_feedback" />
        </menu>
    </item>
</menu>